# eurovision-top-20

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
data/: README.md
pipeline/: .gitignore  README.md  pyproject.toml
pipeline/scripts/: generate_year_colors.py  refresh_year_colors.py
pipeline/src/evtop20/: add.py  add_prev.py  aggregate.py  cli.py  cli_output.py  episode_index.py  episodes_browser.py  fire_allowlist.py  insights_composition.py  models.py  new_episode.py  normalize.py  package.py  paths.py  performance_category.py  periods.py  process.py  query_index.py  song_key_audit.py  song_key_normalize.py  song_stats.py  sort_keys.py  validate.py  validate_corpus.py  validate_identity.py  vendor_esc.py  window.py
pipeline/src/evtop20/esc_results/: __init__.py  countries.py  flatten.py  join.py  normalize.py  paths.py
pipeline/src/evtop20/title_parse/: __init__.py  countries.py  extractors.py  extractors_extended.py  extractors_lookup.py  helpers.py  manual_lookup.py  models.py  parse.py
pipeline/tests/: conftest.py  test_add.py  test_add_prev.py  test_aggregate.py  test_cli_output.py  test_episodes_browser.py  test_esc_final_place.py  test_fire_allowlist.py  test_insights_composition.py  test_manual_lookup.py  test_new_episode.py  test_normalize.py  test_package.py  test_performance_category.py  test_query_window.py  test_song_key_audit.py  test_song_key_normalize.py  test_song_stats.py  test_sort_keys.py  test_title_parse.py  test_title_parse_extended.py  test_validate.py  test_validate_corpus.py  test_validate_identity.py
(+1122 files in other folders)
