[project]
name = "evtop20"
version = "0.1.0"
description = "Eurovision Top 20 data pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.23",
    "rapidfuzz>=3.0",
    "typer>=0.15",
]

[project.scripts]
evtop20 = "evtop20.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evtop20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
